wrap fix

--- a/styles/components/ListForm.module.css
+++ b/styles/components/ListForm.module.css
@@ -28,8 +28,9 @@
 
 .input_container {
   display: flex;
+  flex-wrap: wrap;
   padding: 10px;
-  width: 300px;
+  width: 350px;
 }
 
 .word_input {
